src/main/resources/podfile.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp3
  labels:
  app: myapp1
spec:
#  hostNetwork: true
  containers:
    - name: web
      image: dlearning87/myapp:4.0.0
#      resources:
#        requests:
#          memory: "1Gi"
#        limits:
#          memory: "2Gi"
#    ports:
#      - containerPort: 80
    readinessProbe:
      initialDelaySeconds: 5
      timeoutSeconds: 1
      httpGet:
        path: /status
        port: 8080
    livenessProbe:
      initialDelaySeconds: 5
      timeoutSeconds: 1
      httpGet:
        path: /status
        port: 8080
