src/main/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  tls:
    - secretName: myapp-tls
    hosts:
      - myapp.com
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: my-service4
              servicePort: 8080
